--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -79,7 +79,7 @@
 
     <main role="main" class="">
       {% if messages %} {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      <div class="alert alert-{{ message.tags }} text-center">{{ message }}</div>
       {% endfor %} {% endif %} {% block content %}{% endblock %}
     </main>
 
